z-index bug fix
Summary:
* a quick attempt to fix z-index issues

Fixes T1121

Test Plan:
* click the following to check for proper z-index:
  * top bar user info
  * global filter
  * leaflet map
  * off canvas drawer
  * all dropdown buttons

Reviewers: rjmackay, shadowhand

Reviewed By: shadowhand

Subscribers: brandonrosage, spaudanjo, sebm90, digitalafrican, srutto, dkobia

Maniphest Tasks: T1121

Differential Revision: https://phabricator.ushahidi.com/D515

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -80,3 +80,13 @@ $base-spacing: 20px;
 \*------------------------------------*/
 
 $transition-duration: 0.1s;
+
+/*------------------------------------*\
+    $Z-INDEX
+\*------------------------------------*/
+
+$offcanvas: 600;
+$topbar: 500;
+$filter: 400;
+$map: 300;
+$body: 200;
