--- a/sass/partials/header/_top-bar.scss
+++ b/sass/partials/header/_top-bar.scss
@@ -20,7 +20,6 @@
 body {
     margin-top: 60px;
     position: relative;
-    z-index: -1;
 }
 
 
@@ -135,7 +134,7 @@ header.navigation {
 
     .nav {
         float: none;
-        z-index: 9999999;
+        z-index: $topbar;
 
         .navigation-menu {
             float: left;
@@ -288,7 +287,7 @@ header.navigation {
     left: -300px;
     background-color: $darkGray;
     width: 300px;
-    z-index: 100;
+    z-index: $offcanvas;
     @include transition;
 
     &.active {
