--- a/sass/partials/searchbar/_search-bar.scss
+++ b/sass/partials/searchbar/_search-bar.scss
@@ -105,7 +105,6 @@
             position: absolute;
             right: 0;
             top: 0;
-            z-index: 2;
         }
 
         input {
