--- a/sass/partials/view-tabs/_view-tabs.scss
+++ b/sass/partials/view-tabs/_view-tabs.scss
@@ -16,7 +16,7 @@
     left: 0;
     right: 0;
     height: 0;
-    z-index: 2;
+    z-index: $body;
 
     @include media($small) {
         margin-top: 20px;
